<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#047bd5"
    tools:context=".signup">

    <ImageView
        android:contentDescription="@string/signupimage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/signupimage"
        android:layout_centerHorizontal="true"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/otp_button"
        android:layout_marginBottom="20dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        >
       <com.google.android.material.textfield.TextInputEditText
           android:id="@+id/get_otp"
           android:layout_width="match_parent"
           android:layout_height="80dp"
           android:inputType="number"
           android:background="@drawable/editcustom"
           android:padding="20dp"
           android:hint="@string/enter_phone_number"
           android:textColorHint="#047bd5"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/otp_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_otp"
        android:background="@drawable/button_custom"
        android:layout_centerInParent="true"
        android:gravity="center_vertical"
        android:padding="15dp"

        />
    <TextView
        android:textColor="#000000"
        android:layout_centerHorizontal="true"
        android:textSize="16dp"
        android:gravity="center_vertical"
        android:paddingTop="20dp"
        android:paddingLeft="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/otp_button"
        android:text="@string/disclaimer"
        tools:ignore="RtlSymmetry,SpUsage" />


</RelativeLayout>